# TorsionPendulum

kicad/TorsionPendulumPS_B2/: TorsionPendulumPS_B2-cache.lib  TorsionPendulumPS_B2.pro  TorsionPendulumPS_B2.sch
programs/qextserialport/src/: qextserialport.pro
programs/qlfdevices/: CMakeLists.txt  lfQT4Utils.cmake  license.txt
programs/qlfdevices/src/: PIDController.cpp  PIDController.h  QlfDevices.h  QlfIOBlender.cpp  QlfIOBlender.h  QlfIOCompressor.cpp  QlfIOCompressor.h  QlfIOPipe.h  QlfMAG.cpp  QlfMAG.h  QlfModbus.cpp  QlfModbus.h  QlfOven.cpp  QlfOven.h  QlfPIDControllers.cpp  QlfPIDControllers.h  QlfRNet.cpp  QlfRNet.h  QlfSMD.cpp  QlfSMD.h  QlfSPDevice.cpp  QlfSPDevice.h  QlfSensors.cpp  QlfSensors.h  QlfTMB.cpp  QlfTMB.h  QlfTOTestMachine.cpp  QlfTOTestMachine.h  QlfTUB.cpp  QlfTUB.h  QlfThread.h  QlfTornPend.cpp  QlfTornPend.h  QlfUTEM.cpp  QlfUTEM.h  TemperatureSensor.cpp  TemperatureSensor.h
programs/tpGUI/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  UseDebian.cmake  UseThird-Party.cmake  build.sh  install_manifest.txt  lfQT4Utils.cmake  read_me.txt
programs/tpGUI/CMakeModules/: FindALSA.cmake  FindMd5sum.cmake  FindPythonQt.cmake  FindQextSerialPort.cmake  FindQwt.cmake  FindlfDevices.cmake
programs/tpGUI/_CPack_Packages/Linux/DEB/: tpgui-0.1.2-Linux.deb
programs/tpGUI/include/: CalibrateFurnace.h  ConfigDialog.h  ConfigPages.h  ExpConfigDialog.h  ExpTextFileWriter.h  Experiment.h  PController.h  Pattern.h  Pendulum.h  PendulumViewer.h  ResCalibrateDialog.h  SoundInformator.h  StartDialog.h  StarterDialog.h  TController.h  TPDevice.h  TPSimulator.h  Temperature.h  TextInformant.h  mainwindow.h  tpGlobal.h  tpOscillograph.h
programs/tpGUI/qrc/: qrc_images.cxx
programs/tpGUI/rc/: images.grc
programs/tpGUI/scripts/: init.py
programs/tpGUI/src/: CalibrateFurnace.cpp  ConfigDialog.cpp  ConfigPages.cpp  ExpConfigDialog.cpp  ExpTextFileWriter.cpp  Experiment.cpp  PController.cpp  Pattern.cpp  Pendulum.cpp  PendulumViewer.cpp  ResCalibrateDialog.cpp  SoundInformator.cpp  StartDialog.cpp  StarterDialog.cpp  TController.cpp  TPDevice.cpp  TPSimulator.cpp  Temperature.cpp  TextInformant.cpp  main.cpp  mainwindow.cpp  tpGlobal.cpp  tpOscillograph.cpp
programs/tpGUI/ui/: calibrateFurnace.ui  configDialog.ui  mainWindow.ui  metakoncfg.ui  pendulumViewer.ui  resistorCalibrateForm.ui  startDialog.ui  starterDialog.ui  tornpendcfg.ui  tpExpSettingsDialog.ui  tposcillographDialog.ui
programs/tpGUI/uiheaders/: ui_calibrateFurnace.h  ui_configDialog.h  ui_mainWindow.h  ui_metakoncfg.h  ui_pendulumViewer.h  ui_resistorCalibrateForm.h  ui_startDialog.h  ui_starterDialog.h  ui_tornpendcfg.h  ui_tpExpSettingsDialog.h  ui_tposcillographDialog.h
