PROJECT (tpgui)

cmake_minimum_required(VERSION 2.6)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)

FIND_PACKAGE(Qt4 REQUIRED)

IF(QT4_FOUND)
    INCLUDE(${QT_USE_FILE})
    INCLUDE(lfQT4Utils.cmake)
ELSE(QT4_FOUND)
    MESSAGE(FATAL_ERROR "Could not find Qt4")
ENDIF(QT4_FOUND)

find_package(lfDevices REQUIRED)
find_package(QextSerialPort REQUIRED)
find_package(Qwt REQUIRED)

INCLUDE_DIRECTORIES(include ${CMAKE_BINARY_DIR} ${QEXTSERIALPORT_INCLUDE_DIR} Qwt ${QWT_INCLUDE_DIR} uiheaders)


LINK_LIBRARIES(
   ${QT_QTCORE_LIBRARY}
   ${QT_QTGUI_LIBRARY}
   ${QWT_LIBRARIES}
   ${QLFDEVICES_LIBRARY}
   ${QEXTSERIALPORT_LIBRARY}
   ${QWT_LIBRARY}
   ${PYTHON_LIBRARIES}
   ${TP_THIRD_PARTY_LIBRARY}
)

add_definitions(${QT_DEFINITIONS})
add_definitions(-DQT_PLUGIN)
add_definitions(-DQT_NO_DEBUG)
add_definitions(-DQT_SHARED)

if(WIN32)
  add_definitions(-D_TTY_WIN_)
else(WIN32)
  add_definitions(-D_TTY_POSIX_)
endif(WIN32)

FILE(MAKE_DIRECTORY moc)
FILE(MAKE_DIRECTORY qrc)
FILE(MAKE_DIRECTORY uiheaders)

AUX_SOURCE_DIRECTORY (src SOURCES)

FILE(GLOB HEADERS include/*.h)
FILE(GLOB QTUI ui/*.ui)
FILE(GLOB QTRESOURCES rc/*.grc)

MESSAGE(STATUS "Qt binary dir " ${QT_BINARY_DIR})

QT4_WRAP_CPP(mocSOURCES ${HEADERS})
lfQT4_WRAP_UI(UI uiheaders ${QTUI})
lfQT4_ADD_RESOURCES(RESOURCES qrc ${QTRESOURCES})

ADD_EXECUTABLE(tpgui ${SOURCES} ${mocSOURCES} ${RESOURCES} ${UI})

INSTALL(TARGETS tpgui
    RUNTIME DESTINATION bin
    PERMISSIONS OWNER_EXECUTE OWNER_READ
                GROUP_EXECUTE GROUP_READ
                WORLD_EXECUTE WORLD_READ)

#FIND_PACKAGE(Subversion)
#IF(Subversion_FOUND)
#    Subversion_WC_INFO(${PROJECT_SOURCE_DIR} Project)
#    MESSAGE("Current revision is ${Project_WC_REVISION}")
#ENDIF(Subversion_FOUND)
              
IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
    SET(CPACK_GENERATOR "DEB")
    SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Lab5 Torsion Pendulum")
    SET(CPACK_PACKAGE_VENDOR "lab5")
    SET(CPACK_PACKAGE_VERSION_MAJOR "0")
    SET(CPACK_PACKAGE_VERSION_MINOR "1")
    #SET(CPACK_PACKAGE_VERSION_PATCH "${Project_WC_REVISION}")
    SET(CPACK_PACKAGE_VERSION_PATCH "2")
    SET(CPACK_PACKAGE_INSTALL_DIRECTORY "tpgui ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
    SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt4-gui (>= 4.4.0-4), libqwt5-qt4 (>= 5.1.1-1), zip")
    SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "lexaficus@list.ru")
    INCLUDE(CPack)
ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
